--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ g# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # production
 /build
-
+/src
 # misc
 .DS_Store
 .env.local
